<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">
    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context=".clotheeditorscreen.ClotheEditorActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/back">

            <EditText
                    android:id="@+id/create_clothe_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@drawable/shape_white_10round"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:hint="@string/type_name_for_a_new_object"
                    android:layout_marginTop="28dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:inputType="textMultiLine"
                    tools:ignore="Autofill"/>

            <TextView
                    android:id="@+id/create_clothe_color_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_clothe_text_edit"
                    android:layout_marginStart="32dp"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:text="@string/item_color"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/create_clothe_color_bar"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_clothe_color_title"
            />

            <TextView
                    android:id="@+id/create_clothe_type_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/create_clothe_type_spinner"
                    app:layout_constraintBottom_toBottomOf="@id/create_clothe_type_spinner"
                    android:layout_marginStart="32dp"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:text="@string/item_type"
            />

            <Spinner
                    android:id="@+id/create_clothe_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="92dp"
                    android:minHeight="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="8dp"
                    android:background="@drawable/spinner_back"
                    android:entries="@array/item_types"
                    style="@style/Spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_clothe_color_bar"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/create_clothe_type_bar"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_clothe_type_title"
            />

            <TextView
                    android:id="@+id/create_clothe_temp_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_clothe_type_bar"
                    android:layout_marginStart="32dp"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:text="@string/temperature"/>

            <TextView
                    android:id="@+id/temp_from_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    app:layout_constraintTop_toBottomOf="@id/create_clothe_temp_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
            />

            <EditText
                    android:id="@+id/temp_from_edit"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:inputType="numberSigned"
                    app:layout_constraintStart_toEndOf="@id/temp_from_title"
                    app:layout_constraintTop_toTopOf="@id/temp_from_title"
                    app:layout_constraintBottom_toBottomOf="@id/temp_from_title"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/shape_white_10round"
                    android:elevation="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
            />

            <TextView
                    android:id="@+id/temp_before_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    app:layout_constraintStart_toEndOf="@id/temp_from_edit"
                    app:layout_constraintTop_toTopOf="@id/temp_from_title"
                    app:layout_constraintBottom_toBottomOf="@id/temp_from_title"
                    android:layout_marginStart="32dp"
            />

            <EditText
                    android:id="@+id/temp_before_edit"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:inputType="numberSigned"
                    app:layout_constraintStart_toEndOf="@id/temp_before_title"
                    app:layout_constraintTop_toTopOf="@id/temp_from_title"
                    app:layout_constraintBottom_toBottomOf="@id/temp_from_title"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/shape_white_10round"
                    android:elevation="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
            />

            <Button
                    android:id="@+id/create_clothe_button"
                    android:layout_width="120dp"
                    android:layout_height="36dp"
                    android:background="@drawable/shape_white_10round"
                    android:backgroundTint="@color/colorPrimary"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:text="@string/save_button"
                    android:elevation="8dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
