<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:itemview="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back"
        tools:context=".mainscreen.MainScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/one_third"
        />


        <View
                android:id="@+id/weather_card_holder"
                android:layout_width="275dp"
                android:layout_height="192dp"
                android:background="@drawable/card_background"
                android:elevation="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/one_third"
                app:layout_constraintBottom_toBottomOf="@id/one_third"/>

        <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vd_weather_sun_cloud"
                android:elevation="16dp"
                app:layout_constraintTop_toTopOf="@id/weather_card_holder"
                app:layout_constraintStart_toStartOf="@id/weather_card_holder"
                app:layout_constraintEnd_toEndOf="@id/weather_card_holder"
                app:layout_constraintBottom_toBottomOf="@id/weather_card_holder"
                android:contentDescription="@string/cd_weather_icon"/>


        <TextView
                android:id="@+id/weather_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#333333"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/weather_card_holder"
                app:layout_constraintStart_toStartOf="@id/weather_card_holder"
                android:text="@string/weather"
        />
        <TextView
                android:id="@+id/weather_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:textColor="#BDBDBD"
                android:text="___________"
                app:layout_constraintTop_toBottomOf="@id/weather_card_holder"
                app:layout_constraintEnd_toEndOf="@id/weather_card_holder"/>
        <TextView
                android:id="@+id/weather_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#333333"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/weather_title"
                app:layout_constraintStart_toStartOf="@id/weather_title"
                android:text="5\u00B0C"
        />
        <TextView
                android:id="@+id/weather_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#BDBDBD"
                android:layout_marginTop="8dp"
                android:text="Wind __"
                app:layout_constraintTop_toBottomOf="@id/weather_date"
                app:layout_constraintEnd_toEndOf="@id/weather_card_holder"/>
        <TextView
                android:id="@+id/weather_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#BDBDBD"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/weather_temp"
                app:layout_constraintStart_toStartOf="@id/weather_title"
                android:text="_______"/>
        <TextView
                android:id="@+id/weather_wet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#BDBDBD"
                android:layout_marginTop="8dp"
                android:text="Pressure __"
                app:layout_constraintTop_toBottomOf="@id/weather_wind"
                app:layout_constraintEnd_toEndOf="@id/weather_card_holder"/>
        <TextView
                android:id="@+id/today_look"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#333333"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/look_for_today"
                app:layout_constraintTop_toBottomOf="@id/weather_state"
                app:layout_constraintStart_toStartOf="@id/weather_title"/>

        <info.moevm.se.weatheradvisor.ui.view.Manikin
                android:id="@+id/manikin"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/today_look"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/one_third"
                app:layout_constraintGuide_percent="0.28"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
